--- a/Aula06/Exercicio/style11.css
+++ b/Aula06/Exercicio/style11.css
@@ -1,4 +1,36 @@
 body {
     text-align: center;
-    
+}
+header {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+}
+
+nav {
+    display: flex;
+    gap: 32px;
+}
+
+li {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+    padding: 15px;
+    border-radius: 5px;
+    color: blue;
+    transition: 2s;
+    font-weight: bold;
+}
+
+a:hover {
+    background-color: rgb(0, 247, 255);
+}
+
+.Entrar {
+    border: 1px solid black;
+    border-radius: 15px 15px;
 }
